...
        view.addSubview(emptyStateView)
        view.addSubview(loadingView)

        collectionView.snp.makeConstraints { make in
            make.edges.equalToSuperview()
        }
        collectionView.accessibilityIdentifier = "MainCollectionView"

        emptyStateView.snp.makeConstraints { make in
            make.edges.equalToSuperview()
        }

        loadingView.snp.makeConstraints { make in
...
